Adds changelog to marketplace items
